# shinji

./: .gitignore  CMakeLists.txt  README.md  shinji.cmake  shinji_gen.py  vcpkg.json
src/: shinji_loader.inl
test/: .gitignore  CMakeLists.txt  shinji.json
test/shaders/: test.frag  test.vert
test/src/: main.cpp
